@@ -84,7 +84,7 @@ public class OCSPCRLIssuingPointFindCLI extends CommandCLI {
         String className = ocspConfig.getString(IOCSPAuthority.PROP_STORE + "." + storeID + ".class");
         IConfigStore storeConfig = ocspConfig.getSubStore(IOCSPAuthority.PROP_STORE + "." + storeID);
 
-        IDefStore store = (IDefStore) Class.forName(className).newInstance();
+        IDefStore store = (IDefStore) Class.forName(className).getDeclaredConstructor().newInstance();
         store.init(storeConfig, dbSubsystem);
 
         Enumeration<ICRLIssuingPointRecord> records = store.searchAllCRLIssuingPointRecord(size);
